parse-display-tests/tests/compile_fail/display/invalid_format_spec.rs
use parse_display::Display;
#[derive(Display)]
#[display("{0:y}")]
struct TestStruct(u32);

fn main() {}
